# Changes
- prerelease for type module 
- npm ignore fix 