@@ -1,4 +1,4 @@
 {
   "versionUpgradeType": "patch",
-  "releaseType": "--prerelease"
+  "releaseType": "--latest"
 }
