@@ -1,4 +1,0 @@
-"use strict";
-/* eslint-disable no-unused-vars */
-Object.defineProperty(exports, "__esModule", { value: true });
-//# sourceMappingURL=index.js.map
