@@ -1,4 +1,0 @@
-import * as React from 'react';
-import { ContextValueType } from '../@types';
-declare const errorBoundaryContext: React.Context<ContextValueType | undefined>;
-export default errorBoundaryContext;
