@@ -1,1 +1,0 @@
-export default function getFileNameAndLocation(errorInfo: any): string[];
